<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AEABAB"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:backgroundTint="#A88787"
        android:padding="20dp"
        android:text="@string/fioni_nikmatul_fajar_quiz_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etnama"
        android:hint="@string/nama_customer"
        android:minHeight="48dp"
        android:layout_margin="12dp"
        android:textColorHint="#5A5858"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/member"
        android:text="@string/membership"
        android:textStyle="italic"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/tipemember"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radiobtnbiasa"
            android:layout_width="96dp"
            android:textSize="15sp"
            android:layout_margin="12dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/biasa" />

        <RadioButton
            android:id="@+id/radiobtnsilver"
            android:text="@string/silver"
            android:layout_margin="12dp"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:textSize="15sp"
            android:layout_width="96dp"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radiobtngold"
            android:text="@string/gold"
            android:layout_margin="12dp"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:textSize="15sp"
            android:layout_width="96dp"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <EditText
        android:id="@+id/etkode"
        android:hint="@string/kode_barang"
        android:minHeight="48dp"
        android:layout_margin="12dp"
        android:textColorHint="#5A5858"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etjumlah"
        android:hint="@string/jumlah"
        android:textColorHint="#5A5858"
        android:inputType="number"
        android:layout_margin="12dp"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnproses"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="145dp"
        android:layout_marginRight="145dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proses"/>

</LinearLayout>